--- a/public/about/index.html
+++ b/public/about/index.html
@@ -116,7 +116,7 @@ ga('send', 'pageview');
     <div class="col-lg-8">
       <div class="content-column-content">
          <h1>About</h1>
-         <p>Analyst / R Developer at Transport for London (not the trains bit - the roads, walking, cycling, environment and road safety bit). Trying to understand how cities work, and making them work a bit better for everyone in the process.</p>
+         <p>Analyst / R Developer at Transport for London. Trying to understand how cities work, and making them work a bit better for everyone in the process.</p>
 <p>Interested in sharing and supporting opinionated analysis and humane, ethical applications of machine learning.</p>
 <p>With the rest of the time, I buy/play dusty records and watch The Breakfast Club (the radio one) and Hot 97 a bit too much.</p>
 <p><img src="images/me.png" width="90%" style="display: block; margin: auto;" /></p>
