--- a/public/about/index.html
+++ b/public/about/index.html
@@ -116,9 +116,8 @@ ga('send', 'pageview');
     <div class="col-lg-8">
       <div class="content-column-content">
          <h1>About</h1>
-         <p>Analyst / R Developer at Transport for London. Trying to understand how cities work, and making them work a bit better for everyone in the process.</p>
-<p>Interested in sharing and supporting opinionated analysis and humane, ethical applications of machine learning.</p>
-<p>With the rest of the time, I buy/play dusty records and watch The Breakfast Club (the radio one) and Hot 97 a bit too much.</p>
+         <p>Analyst / R Developer and data science hopeful in UK government, currently. I’m interested in sharing and supporting opinionated analysis, adventures in R and humane, ethical applications of machine learning.</p>
+<p>Otherwise, I’m a collector/selector of dusty records and a player/admirer of The Beautiful Game™ (football, Euro-style). Please also hit me up with killer veggie recipes.</p>
 <p><img src="images/me.png" width="90%" style="display: block; margin: auto;" /></p>
 
       </div>
