update sidebar description

--- a/public/index.html
+++ b/public/index.html
@@ -42,7 +42,7 @@ ga('send', 'pageview');
   <div class="sidebar-content">
     <h1 class="sidebar-heading"><a href="/">ewenme</a></h1>
     
-      <p class="sidebar-p">Opinionated analysis, adventures in R and humane, ethical applications of machine learning</p>
+      <p class="sidebar-p"><big><i>Pronounced you-n-me</i></big> <br> <br> Opinionated analysis, adventures in R and humane, ethical applications of machine learning</p>
     
 
       <p class="sidebar-p">
