--- a/content/about/index.html
+++ b/content/about/index.html
@@ -5,6 +5,6 @@ type: "about"
 
 
 
-<p>Analyst / R Developer and data science hopeful in UK government, currently. I’m interested in sharing and supporting opinionated analysis, adventures in R and humane, ethical applications of machine learning.</p>
-<p>Otherwise, I’m a collector/selector of dusty records and a player/admirer of The Beautiful Game™ (football, Euro-style). Please also hit me up with killer veggie recipes.</p>
+<p>Analyst / R Developer and data science hopeful. I’m interested in sharing and supporting opinionated analysis, adventures in R and humane, ethical applications of machine learning.</p>
+<p>Otherwise, I’m a collector/selector of dusty records and a player/admirer of The Beautiful Game™. Please hit me up with your fire veggie recipes.</p>
 <p><img src="images/me.png" width="90%" style="display: block; margin: auto;" /></p>
