--- a/public/projects/index.html
+++ b/public/projects/index.html
@@ -2,7 +2,7 @@
 <html lang="en-us">
 <head><meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
-<title>About</title>
+<title>Projects</title>
 
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="robots" content="all,follow">
@@ -20,8 +20,8 @@
 <link href="/css/custom.css" rel="stylesheet">
 <link rel="shortcut icon" href="/img/favicon.png">
 
-  <link href="/about/index.xml" rel="alternate" type="application/rss+xml" title="ewenme" />
-  <link href="/about/index.xml" rel="feed" type="application/rss+xml" title="ewenme" />
+  <link href="/projects/index.xml" rel="alternate" type="application/rss+xml" title="ewenme" />
+  <link href="/projects/index.xml" rel="feed" type="application/rss+xml" title="ewenme" />
 
 
 <script>
@@ -116,7 +116,7 @@ ga('send', 'pageview');
   <div class="row">
     <div class="col-lg-8">
       <div class="content-column-content" id="blog-listing-medium">
-         <h1>About</h1>
+         <h1>Projects</h1>
 
 
          
