fixed projects page

--- a/content/about/index.html
+++ b/content/about/index.html
@@ -6,15 +6,5 @@ type: "about"
 
 
 <p>Analyst / R Developer and data science hopeful. I’m interested in sharing and supporting opinionated analysis, adventures in R and humane, ethical applications of machine learning.</p>
-<div id="projects" class="section level3">
-<h3>Projects</h3>
-<ul>
-<li><a href="https://ewenme.github.io/fplR/">fplR</a>: R package for working with Fantasy Premier League (FPL) data</li>
-<li><a href="https://ewenme.shinyapps.io/vinylspotting/">Vinylspotting</a>: Shiny app for Discogs users to visualise and explore their record collections</li>
-</ul>
-</div>
-<div id="personal" class="section level3">
-<h3>Personal</h3>
-<p>I’m a collector/selector of dusty records and a player/admirer of The Beautiful Game™. Also, please hit me up with your fire veggie recipes.</p>
+<p>I’m also a collector/selector of dusty records and a player/admirer of The Beautiful Game™. Please hit me up with your fire veggie recipes, too.</p>
 <p><img src="images/me.png" width="90%" style="display: block; margin: auto;" /></p>
-</div>
