add author desc

--- a/public/index.html
+++ b/public/index.html
@@ -279,7 +279,7 @@
   
   
   <i class="fa fa-user">&nbsp;</i><span class="author">
-    &nbsp;Ewen</span> <br>
+    &nbsp;ewen</span> <br>
     
   
   
