--- a/public/about/index.html
+++ b/public/about/index.html
@@ -91,7 +91,7 @@
   <div id="disqus_thread"></div>
     <script type="text/javascript">
        
-      var disqus_shortname = 'livefreeordichotomize'; 
+      var disqus_shortname = 'http-ewenme-rbind-io'; 
       var disqus_identifier = '\/about\/';
        
       (function() {
