--- a/public/projects/index.html
+++ b/public/projects/index.html
@@ -102,7 +102,7 @@
   <div id="disqus_thread"></div>
     <script type="text/javascript">
        
-      var disqus_shortname = 'livefreeordichotomize'; 
+      var disqus_shortname = 'http-ewenme-rbind-io'; 
       var disqus_identifier = '\/projects\/';
        
       (function() {
