banner and favicon update

--- a/public/index.html
+++ b/public/index.html
@@ -74,6 +74,13 @@
 </header>
 
 
+  <header 
+    class = "main-header" 
+    style='background-image: url(/images/banner.png)'
+  >
+
+</header>
+
 
   
     
