title disqus fix

--- a/public/index.html
+++ b/public/index.html
@@ -99,7 +99,7 @@ ga('send', 'pageview');
   </div>
   <header class='list-item-header'>
     <h3 class='list-item-title'>
-      <a href='/blog/2017-09-07-dissecting_european_football_transfers/'>Unravelling European Football&#39;s Transfer Window</a>
+      <a href='/blog/2017-09-07-dissecting_european_football_transfers/'>Unravelling the European Football Transfer Window</a>
     </h3>
   </header>
 </article>
