--- a/public/index.html
+++ b/public/index.html
@@ -99,7 +99,7 @@ ga('send', 'pageview');
   </div>
   <header class='list-item-header'>
     <h3 class='list-item-title'>
-      <a href='/blog/2017-10-11-meet_dumb_hardwax/'>Meet Dumb Hardwax: Taking Twitterbots to the Cloud</a>
+      <a href='/blog/2017-10-11-meet_dumb_hardwax/'>Meet Dumb Hardwax: Continuous Deployment of a Twitterbot</a>
     </h3>
   </header>
 </article>
