fix copyright and line colour

--- a/public/about/index.html
+++ b/public/about/index.html
@@ -21,6 +21,8 @@
 <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Ubuntu:400,400i,700&subset=latin'>
 <link rel='stylesheet' href='/css/main.d02777fd.css'>
 
+  <link rel='stylesheet' href='/css/custom.css'>
+
 
 <script>
 window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)};ga.l=+new Date;
@@ -198,7 +200,9 @@ hljs.initHighlightingOnLoad();
 hljs.configure({languages: []});
 hljs.initHighlightingOnLoad();
 </script>
-  &copy; 2017 ewenme</p>
+    
+  
+  &copy; 2017 Ewen Henderson</p>
 
         </div>
       </div>
