--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,8 @@
 <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Ubuntu:400,400i,700&subset=latin'>
 <link rel='stylesheet' href='/css/main.d02777fd.css'>
 
+  <link rel='stylesheet' href='/css/custom.css'>
+
 
 <script>
 window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)};ga.l=+new Date;
@@ -117,6 +119,8 @@ h4, h5, h6 {
   <link rel='icon' href='/favicon.ico'>
 <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Ubuntu:400,400i,700&subset=latin'>
 <link rel='stylesheet' href='/css/main.d02777fd.css'>
+
+  <link rel='stylesheet' href='/css/custom.css'>
 
 
 <script>
@@ -291,7 +295,9 @@ hljs.initHighlightingOnLoad();
 hljs.configure({languages: []});
 hljs.initHighlightingOnLoad();
 </script>
-  &copy; 2017 ewenme</p>
+    
+  
+  &copy; 2017 Ewen Henderson</p>
 
         </div>
       </div>
