--- a/public/projects/index.html
+++ b/public/projects/index.html
@@ -4,10 +4,10 @@
 <head>
   <meta charset='utf-8'>
 <meta name='viewport' content='width=device-width, initial-scale=1'>
-<meta name='description' content=' Software  fplR: R package for working with Fantasy Premier League (FPL) data geniusr: R package for interacting nicely with the Genius API ghibli: Studio Ghibli colour palettes for R  Web Applications  polMonitor: Shiny app for monitoring police violence Vinylspotting: Shiny app for Discogs users to visualise and explore their record collections  Other Work  Who Got The Assist? (WGTA): Writing for the WGTA website  '>
+<meta name='description' content=' Software  fplR: R package for working with Fantasy Premier League (FPL) data geniusr: R package for interacting nicely with the Genius API ghibli: Studio Ghibli colour palettes for R  Web Applications  polMonitor: Shiny app for monitoring police violence Vinylspotting: Shiny app for Discogs users to visualise and explore their record collections  '>
 
 <meta property='og:title' content='Projects • ewenme'>
-<meta property='og:description' content=' Software  fplR: R package for working with Fantasy Premier League (FPL) data geniusr: R package for interacting nicely with the Genius API ghibli: Studio Ghibli colour palettes for R  Web Applications  polMonitor: Shiny app for monitoring police violence Vinylspotting: Shiny app for Discogs users to visualise and explore their record collections  Other Work  Who Got The Assist? (WGTA): Writing for the WGTA website  '>
+<meta property='og:description' content=' Software  fplR: R package for working with Fantasy Premier League (FPL) data geniusr: R package for interacting nicely with the Genius API ghibli: Studio Ghibli colour palettes for R  Web Applications  polMonitor: Shiny app for monitoring police violence Vinylspotting: Shiny app for Discogs users to visualise and explore their record collections  '>
 <meta property='og:url' content='https://ewenme.rbind.io/projects/'>
 <meta property='og:site_name' content='ewenme'>
 <meta property='og:type' content='article'><meta property='article:section' content='Page'>
@@ -122,12 +122,6 @@ h4, h5, h6 {
 <ul>
 <li><a href="https://ewenme.shinyapps.io/polMonitor">polMonitor</a>: Shiny app for monitoring police violence</li>
 <li><a href="https://ewenme.shinyapps.io/vinylspotting">Vinylspotting</a>: Shiny app for Discogs users to visualise and explore their record collections</li>
-</ul>
-
-<h3 id="other-work">Other Work</h3>
-
-<ul>
-<li><a href="http://whogottheassist.com/author/ewen_/">Who Got The Assist? (WGTA)</a>: Writing for the WGTA website</li>
 </ul>
 
 </div>
