--- a/public/about/index.html
+++ b/public/about/index.html
@@ -4,10 +4,12 @@
 <head>
   <meta charset='utf-8'>
 <meta name='viewport' content='width=device-width, initial-scale=1'>
-<meta name='description' content='Ewen (like you &lsquo;n&rsquo;). Interested in the fields of data science, technology, music, sound art, sport, culture, policy, and especially where any of these intersect. I like spending time with humane/ethical open source projects, DJing, running, supporting local artistic communities and sinking into a Discogs rabbit-hole. This site is mostly for sharing stories about my diverse excursions in these spaces.'>
+<meta name='description' content='Ewen (like you &lsquo;n&rsquo;). Interested in the fields of data science, technology, music, sound art, sport, culture, policy, and especially where any of these intersect. I like spending time with humane/ethical open source projects, DJing, running, supporting local artistic communities and sinking into a Discogs rabbit-hole.
+This site is mostly for sharing stories about my diverse excursions in these spaces.'>
 
 <meta property='og:title' content='About • ewen'>
-<meta property='og:description' content='Ewen (like you &lsquo;n&rsquo;). Interested in the fields of data science, technology, music, sound art, sport, culture, policy, and especially where any of these intersect. I like spending time with humane/ethical open source projects, DJing, running, supporting local artistic communities and sinking into a Discogs rabbit-hole. This site is mostly for sharing stories about my diverse excursions in these spaces.'>
+<meta property='og:description' content='Ewen (like you &lsquo;n&rsquo;). Interested in the fields of data science, technology, music, sound art, sport, culture, policy, and especially where any of these intersect. I like spending time with humane/ethical open source projects, DJing, running, supporting local artistic communities and sinking into a Discogs rabbit-hole.
+This site is mostly for sharing stories about my diverse excursions in these spaces.'>
 <meta property='og:url' content='https://ewen.io/about/'>
 <meta property='og:site_name' content='ewen'>
 <meta property='og:type' content='article'><meta property='article:section' content='Page'>
@@ -107,7 +109,9 @@ h4, h5, h6 {
 </header>
 
     <div class='entry-content'>
-  <p>Ewen (like <em>you &lsquo;n&rsquo;</em>). Interested in the fields of data science, technology, music, sound art, sport, culture, policy, and especially where any of these intersect. I like spending time with humane/ethical open source projects, DJing, running, supporting local artistic communities and sinking into a <a href="https://www.discogs.com/">Discogs</a> rabbit-hole. This site is mostly for sharing stories about my diverse excursions in these spaces.</p>
+  <p>Ewen (like <em>you &lsquo;n&rsquo;</em>). Interested in the fields of data science, technology, music, sound art, sport, culture, policy, and especially where any of these intersect. I like spending time with humane/ethical open source projects, DJing, running, supporting local artistic communities and sinking into a <a href="https://www.discogs.com/">Discogs</a> rabbit-hole.</p>
+
+<p>This site is mostly for sharing stories about my diverse excursions in these spaces.</p>
 
 <p><img src="images/me.png" alt="" /></p>
 
