--- a/public/projects/index.html
+++ b/public/projects/index.html
@@ -4,10 +4,10 @@
 <head>
   <meta charset='utf-8'>
 <meta name='viewport' content='width=device-width, initial-scale=1'>
-<meta name='description' content=' Software  fplR: R package for working with Fantasy Premier League (FPL) data geniusr: R package for interacting nicely with the Genius API ghibli: Studio Ghibli colour palettes for R  Web Applications  polMonitor: Shiny app for monitoring police violence Vinylspotting: Shiny app for Discogs users to visualise and explore their record collections  '>
+<meta name='description' content=' Software  fplR: Tools for working with Fantasy Premier League (FPL) data geniusr: R package for interacting nicely with the Genius API ghibli: Studio Ghibli colour palettes for R  Web Applications  polMonitor: Shiny app for monitoring police violence Vinylspotting: Shiny app for Discogs users to visualise and explore their record collections  '>
 
 <meta property='og:title' content='Projects • ewen'>
-<meta property='og:description' content=' Software  fplR: R package for working with Fantasy Premier League (FPL) data geniusr: R package for interacting nicely with the Genius API ghibli: Studio Ghibli colour palettes for R  Web Applications  polMonitor: Shiny app for monitoring police violence Vinylspotting: Shiny app for Discogs users to visualise and explore their record collections  '>
+<meta property='og:description' content=' Software  fplR: Tools for working with Fantasy Premier League (FPL) data geniusr: R package for interacting nicely with the Genius API ghibli: Studio Ghibli colour palettes for R  Web Applications  polMonitor: Shiny app for monitoring police violence Vinylspotting: Shiny app for Discogs users to visualise and explore their record collections  '>
 <meta property='og:url' content='https://ewen.io/projects/'>
 <meta property='og:site_name' content='ewen'>
 <meta property='og:type' content='article'><meta property='article:section' content='Page'>
@@ -112,7 +112,7 @@ h4, h5, h6 {
 <h3 id="software">Software</h3>
 
 <ul>
-<li><a href="https://ewenme.github.io/fplR">fplR</a>: R package for working with Fantasy Premier League (FPL) data</li>
+<li><a href="https://ewenme.github.io/fplR">fplR</a>: Tools for working with Fantasy Premier League (FPL) data</li>
 <li><a href="https://ewenme.github.io/fplR">geniusr</a>: R package for interacting nicely with the <a href="https://genius.com/">Genius</a> API</li>
 <li><a href="https://github.com/ewenme/ghibli">ghibli</a>: Studio Ghibli colour palettes for R</li>
 </ul>
