--- a/public/404.html
+++ b/public/404.html
@@ -14,7 +14,8 @@
 <link rel="stylesheet" href="https://ewen.io/css/foundation.css" rel="stylesheet" id="theme-stylesheet">
 <script src="https://ewen.io/js/highlight.pack.js"></script>
 <script>hljs.initHighlightingOnLoad();</script>
-<link rel="stylesheet" href="https://ewen.io/css/style.css"/><link rel='stylesheet' href='https://ewen.io/css/custom.css'><link rel="alternate" type="application/rss" href="https://ewen.io/index.xml" title="ewen" />
+<link rel="stylesheet" href="https://ewen.io/css/style.css"/><link rel='stylesheet' href='https://ewen.io/css/custom.css'><link rel="canonical" type="text/html" href="https://ewen.io/" title="ewen" />
+<link rel="alternate" type="application/rss" href="https://ewen.io/index.xml" title="ewen" />
 </head>
 <body>
 
