rss description test

--- a/public/1/01/01/index.html
+++ b/public/1/01/01/index.html
@@ -302,7 +302,48 @@ $(document).ready(function () {
 </div>
 
 
-
+<table>
+<thead>
+<tr class="header">
+<th>artist</th>
+<th>record</th>
+<th>rating</th>
+<th>track on repeat</th>
+</tr>
+</thead>
+<tbody>
+<tr class="odd">
+<td>Against All Logic</td>
+<td>2012-2017</td>
+<td>★ ★ ★ ★ ☆</td>
+<td>Flash in the Pan</td>
+</tr>
+<tr class="even">
+<td>Lil Wayne</td>
+<td>Tha Carter V</td>
+<td>★ ★ ★ ☆ ☆</td>
+<td>Demons</td>
+</tr>
+<tr class="odd">
+<td>young paint</td>
+<td>young paint</td>
+<td>★ ★ ★ ★ ☆</td>
+<td>xxx</td>
+</tr>
+<tr class="even">
+<td>Overmono</td>
+<td>Raft Living</td>
+<td>★ ★ ★ ☆ ☆</td>
+<td>xxx</td>
+</tr>
+<tr class="odd">
+<td>Charli XCX</td>
+<td>Taxi</td>
+<td>★ ★ ★ ★ ★</td>
+<td>Taxi</td>
+</tr>
+</tbody>
+</table>
 
 
 
